# malachite

./: .envrc  .gitignore  CNAME  Cargo.toml  PORTING.md  README  README.md  SELECT  additional-lints.py  additional-lints.sh  benchmark.sh  build.sh  clean_numeric_literals.py  demote_functions.py  dylint.toml  find_replace.py  flake.nix  rundoc.sh  superfmt.sh  temp.gp  temp.gp.tsv  unincluded-files.py
malachite/: Cargo.toml  pdfjoin.py
malachite-base/: .gitignore  Cargo.toml  README.md  rustfmt.toml
malachite-base-test-util/: Cargo.toml
malachite-base-test-util/src/: bin.rs  common.rs  lib.rs
malachite-base-test-util/src/bench/: bucketers.rs  mod.rs
malachite-base-test-util/src/common/: mod.rs
malachite-base-test-util/src/demo_and_bench/: mod.rs
malachite-base-test-util/src/generate/: max_base.rs  mod.rs  tuning_manager.rs
malachite-base-test-util/src/generators/: common.rs  exhaustive.rs  mod.rs  random.rs  special_random.rs
malachite-base-test-util/src/runner/: cmd.rs  mod.rs
malachite-base-test-util/src/slices/: mod.rs  slice_move_left.rs
malachite-base-test-util/src/stats/: common_values_map.rs  median.rs  mod.rs  moments.rs
malachite-base/src/: bin.rs  bools.rs  chars.rs  comparison.rs  conversion.rs  crement.rs  lib.rs  limbs.rs  named.rs  platform.rs  round.rs  slices.rs  strings.rs
malachite-base/src/bools/: constants.rs  crement.rs  exhaustive.rs  mod.rs  not_assign.rs  random.rs
malachite-base/src/chars/: char_to_contiguous_range.rs  constants.rs  contiguous_range_to_char.rs  crement.rs  exhaustive.rs  mod.rs  random.rs
malachite-base/src/comparison/: macros.rs  mod.rs  traits.rs
malachite-base/src/exhaustive/: range.rs
malachite-base/src/iterators/: bit_distributor.rs  comparison.rs  iterator_cache.rs  mod.rs
malachite-base/src/limbs/: mod.rs
malachite-base/src/macros/: mod.rs
malachite-base/src/misc/: mod.rs
malachite-base/src/named/: mod.rs
malachite-base/src/nevers/: mod.rs
malachite-base/src/num/: conversion.rs  floats.rs  integers.rs  macros.rs  mod.rs  signeds.rs  traits.rs  unsigneds.rs
malachite-base/src/options/: exhaustive.rs  mod.rs  random.rs
malachite-base/src/orderings/: exhaustive.rs  mod.rs  random.rs
malachite-base/src/random/: mod.rs  random_values_from_slice.rs  random_values_from_vec.rs  seed.rs
malachite-base/src/rational_sequences/: access.rs  cmp.rs  conversion.rs  exhaustive.rs  mod.rs  (+2 more)
malachite-base/tests/: bools.rs  chars.rs  lib.rs  limbs.rs  round.rs  slices.rs  strings.rs  vecs.rs
malachite-bigint/: Cargo.toml  README.md
malachite-bigint/src/: bigint.rs  biguint.rs  error.rs  iter.rs  lib.rs  macros.rs  num_bigint_conversion.rs
malachite-criterion-bench/: Cargo.toml
malachite-criterion-bench/benches/: bin.rs  natural_div.rs  natural_mul.rs
malachite-float/: Cargo.toml  README.md
malachite-float/src/: bin.rs  lib.rs
malachite-float/tests/: lib.rs
malachite-lints/: Cargo.toml  README.md  rust-toolchain
malachite-lints/examples/: assert_ordering_equal_prefer_exact.rs  assert_ordering_equal_prefer_exact.stderr  assign_then_consumed_once.rs  assign_then_consumed_once.stderr  clone_with_ref_variant.rs  clone_with_ref_variant.stderr  compare_with_power_of_2.rs  compare_with_power_of_2.stderr  compare_with_primitive.rs  compare_with_primitive.stderr  duplicate_const.rs  duplicate_const.stderr  let_tuple_underscore_to_field.rs  let_tuple_underscore_to_field.stderr  manual_float_from_primitive.rs  manual_float_from_primitive.stderr  manual_from_sign_and_abs.rs  manual_from_sign_and_abs.stderr  manual_rational_significant_bits.rs  manual_rational_significant_bits.stderr  missing_inline_on_delegator.rs  missing_inline_on_delegator.stderr  mul_div_by_power_of_2.rs  mul_div_by_power_of_2.stderr  mul_div_by_power_of_2_literal.rs  mul_div_by_power_of_2_literal.stderr  redundant_from_in_comparison.rs  redundant_from_in_comparison.stderr  redundant_from_in_literal_comparison.rs  redundant_from_in_literal_comparison.stderr  redundant_nearest.rs  redundant_nearest.stderr  redundant_prec_round_of_exact_constant.rs  redundant_prec_round_of_exact_constant.stderr  runtime_literal_conversion.rs  runtime_literal_conversion.stderr  shift_of_one.rs  shift_of_one.stderr  use_assign_variant.rs  use_assign_variant.stderr  (+28 more)
malachite-lints/src/: assert_ordering_equal_prefer_exact.rs  assign_then_consumed_once.rs  clone_with_ref_variant.rs  compare_with_power_of_2.rs  compare_with_primitive.rs  duplicate_const.rs  let_tuple_underscore_to_field.rs  lib.rs  long_lines.rs  manual_float_from_primitive.rs  manual_from_sign_and_abs.rs  manual_rational_significant_bits.rs  missing_inline_on_delegator.rs  mul_div_by_power_of_2.rs  mul_div_by_power_of_2_literal.rs  redundant_from_in_comparison.rs  redundant_from_in_literal_comparison.rs  redundant_nearest.rs  redundant_prec_round_of_exact_constant.rs  runtime_literal_conversion.rs  shift_of_one.rs  use_assign_variant.rs  use_checked_log_base_2.rs  use_const_binding.rs  use_const_block.rs  use_const_cast.rs  use_divisible_by.rs  use_exact_from.rs  use_named_constant.rs  use_parity.rs  use_reciprocal.rs  use_round_variant.rs  use_saturating_from.rs  use_square.rs  use_trailing_zeros.rs  use_width_mask.rs
malachite-lints/ui/: main.rs  main.stderr
malachite-nz/: Cargo.toml  LICENSE.txt  README.md  build.rs  extra-tests.py  rustfmt.toml
malachite-nz-test-util/: Cargo.toml
malachite-nz-test-util/benchmarks/: .gitignore
malachite-nz-test-util/data/: tuning_dependencies.txt
malachite-nz-test-util/src/: bin.rs  lib.rs
malachite-nz/images/: natural-mem-layout.asy
malachite-nz/src/: bin.rs  lib.rs  platform_32.rs  platform_64.rs
malachite-nz/tests/: lib.rs
malachite-q/: .gitignore  Cargo.toml  README.md  temp.gp
malachite-q/src/: bin.rs  lib.rs
malachite-q/tests/: lib.rs
malachite-test/: Cargo.toml  extra-tests.py  repeated_tune.py
malachite-test/benches/: lib.rs
malachite-test/benchmarks/: .gitignore
malachite-test/src/: Cargo.toml  bin.rs  common.rs  lib.rs
malachite-test/tests/: common.rs  lib.rs
malachite/src/: integer.rs  lib.rs
(+5667 files in other folders)
