[workspace]
members = ['malachite', 'malachite-base', 'malachite-bigint', 'malachite-float', 'malachite-nz', 'malachite-q', 'malachite-criterion-bench']
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85.0"

[workspace.dependencies]
malachite-base = { version = "0.5.1", path = 'malachite-base' }
malachite-nz = { version = "0.5.1", path = 'malachite-nz', default_features = false }
malachite-q = { version = "0.5.1", path = 'malachite-q' }
malachite-float = { version = "0.5.1", path = 'malachite-float' }

[profile.release]
lto = "fat"
strip = true
