[package]
name = "malachite-base-test-util"
version = "0.1.0"
authors = ["Mikhail Hogrefe <mikhailhogrefe@gmail.com>"]

[lib]
name = "malachite_base_test_util"
path = "src/lib.rs"

[[bin]]
name = "malachite_base_test_util_main"
path = "src/bin.rs"

[dependencies]
clap = "2.33.1"
gnuplot = "0.0.26"
itertools = "0.9.0"
malachite-base = { path = "../malachite-base" }
time = "0.1.40"
walkdir = "2"

[profile.release]
lto = true
strip = "debuginfo"
