[package]
name = "malachite-base"
version = "0.3.2"
authors = ["Mikhail Hogrefe <mikhailhogrefe@gmail.com>"]
rust-version = "1.61.0"
edition = "2021"
description = "A collection of utilities, including new arithmetic traits and iterators that generate all values of a type"
readme = "README.md"
homepage = "https://malachite.rs/"
repository = "https://github.com/mhogrefe/malachite"
license = "LGPL-3.0-only"
keywords = ["mathematics", "math", "numerics", "testing"]
categories = ["mathematics", "development-tools::testing"]

[lib]
name = "malachite_base"
path = "src/lib.rs"

[[bin]]
name = "malachite_base_main"
path = "src/bin.rs"
test = false

[dependencies]
itertools = "0.11.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
ryu = "1.0.15"
sha3 = "0.10.8"

clap = { version = "2.33.1", optional = true }
gnuplot = { version = "0.0.39", optional = true }
time = { version = "0.3.28", optional = true }
walkdir = { version = "2.3.3", optional = true }

[features]
test_build = ["gnuplot", "time", "clap"]
bin_build = ["walkdir", "test_build"]

[dev-dependencies]
malachite-base = { workspace = true, features = ["test_build"] }
maplit = "1.0.2"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
