[package]
name = "malachite-bigint"
version = "0.6.1"
authors = ["Steve Shi <shikangzhi@gmail.com>"]
rust-version.workspace = true
edition.workspace = true
license = "LGPL-3.0-only"
description = "A drop-in num-bigint replacement based on malachite"
repository = "https://github.com/mhogrefe/malachite"

[dependencies]
malachite-base = { version = "0.6.1", path = "../malachite-base" }
malachite-nz = { version = "0.6.1", path = "../malachite-nz" }

num-traits = { version = "0.2.19", default-features = false, features = ["i128"] }
num-integer = { version = "0.1.46", default-features = false, features = ["i128"] }
paste = "1.0.15"
num-bigint = { version = "0.4", default-features = false, optional = true }
