[package]
name = "malachite-criterion-bench"
version = "0.4.22"
authors = ["Mikhail Hogrefe <mikhailhogrefe@gmail.com>"]
autobenches = false
rust-version.workspace = true
edition.workspace = true

[dependencies]
malachite-base = { version = "0.4.22", path = "../malachite-base" }
malachite-nz = { version = "0.4.22", default-features = false, path = "../malachite-nz" }
num = "0.4.1"
rug = { version = "1.21.0", default-features = false, features = ["integer", "serde"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "natural_mul"
harness = false
