[package]
name = "malachite-float"
version = "0.4.18"
authors = ["Mikhail Hogrefe <mikhailhogrefe@gmail.com>"]
rust-version.workspace = true
edition.workspace = true
description = "The arbitrary-precision floating-point type Float, with efficient algorithms partially derived from MPFR."
readme = "README.md"
homepage = "https://malachite.rs/"
repository = "https://github.com/mhogrefe/malachite"
license = "LGPL-3.0-only"
keywords = ["mathematics", "math", "numerics", "bignum"]
categories = ["mathematics"]

[lib]
name = "malachite_float"
path = "src/lib.rs"

[[bin]]
name = "malachite_float_main"
path = "src/bin.rs"

[dependencies]
itertools = { version = "0.11.0", default-features = false, features = ["use_alloc"] }
malachite-base = { version = "0.4.18", default-features = false }
malachite-nz = { version = "0.4.18", default-features = false, features = ["float_helpers"] }
malachite-q = { version = "0.4.18", default-features = false }
serde = { version = "1.0.188", optional = true, default-features = false, features = ["alloc", "derive"] }

serde_json = { version = "1.0.105", optional = true }
num = { version = "0.4.3", optional = true, features = ["serde"] }
rug = { version = "1.24.1", default-features = false, optional = true, features = ["float", "serde"] }

[dev-dependencies]
malachite-float = { path = ".", features = ["test_build"] }

[features]
enable_serde = ["serde", "malachite-nz/enable_serde", "malachite-q/enable_serde"]
random = ["malachite-base/random", "malachite-nz/random", "malachite-q/random"]
32_bit_limbs = ["malachite-nz/32_bit_limbs", "malachite-q/32_bit_limbs"]
test_build = ["malachite-base/test_build", "malachite-nz/test_build", "malachite-q/test_build", "random", "serde", "serde_json", "num", "rug"]
bin_build = ["test_build"]

[package.metadata.docs.rs]
features = ["random"]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
