[package]
name = "malachite-nz-test-util"
version = "0.1.0"
authors = ["Mikhail Hogrefe <mikhailhogrefe@gmail.com>"]
edition = "2018"

[lib]
name = "malachite_nz_test_util"
path = "src/lib.rs"

[[bin]]
name = "malachite_nz_test_util_main"
path = "src/bin.rs"

[features]
32_bit_limbs = ["malachite-nz/32_bit_limbs"]
fail_on_untested_path = ["malachite-nz/fail_on_untested_path"]

[dependencies]
itertools = "0.9.0"
malachite-base = { path = "../malachite-base" }
malachite-base-test-util = { path = "../malachite-base-test-util" }
malachite-nz = { path = "../malachite-nz", default-features = false, features = ["serde"] }
num = { version = "0.3.1", features = ["serde"] }
serde = "^1.0.0"
serde_json = "^1.0.32"

[profile.release]
lto = true

[dependencies.rug]
version = "1.11.0"
default-features = false
features = ["integer", "serde"]
