[package]
name = "malachite-nz"
version = "0.4.18"
authors = ["Mikhail Hogrefe <mikhailhogrefe@gmail.com>"]
rust-version.workspace = true
edition.workspace = true
description = "The bignum types Natural and Integer, with efficient algorithms partially derived from GMP and FLINT."
readme = "README.md"
homepage = "https://malachite.rs/"
repository = "https://github.com/mhogrefe/malachite"
license = "LGPL-3.0-only"
keywords = ["mathematics", "math", "numerics", "bignum"]
categories = ["mathematics"]

[lib]
name = "malachite_nz"
path = "src/lib.rs"

[[bin]]
name = "malachite_nz_main"
path = "src/bin.rs"

[dependencies]
itertools = { version = "0.11.0", default-features = false, features = ["use_alloc"] }
libm = { version = "0.2.8", default-features = false }
malachite-base = { version = "0.4.18", default-features = false }
serde = { version = "1.0.188", optional = true, default-features = false, features = ["alloc", "derive"] }

indoc = { version = "2.0.4", optional = true}
pyo3 = { version = "0.21.2", optional = true }
serde_json = { version = "1.0.105", optional = true }
num = { version = "0.4.3", optional = true, features = ["serde"] }
rug = { version = "1.24.1", default-features = false, optional = true, features = ["integer", "serde"] }

embed-doc-image = { version = "0.1.4", optional = true }

[dev-dependencies]
malachite-nz = { path = ".", features = ["test_build"] }

[build-dependencies]
pyo3-build-config = { version = "0.21.2", features = ["resolve-config"], optional = true }

[features]
32_bit_limbs = []
random = ["malachite-base/random"]
enable_pyo3 = ["pyo3", "pyo3-build-config"]
enable_serde = ["serde"]
test_build = ["malachite-base/test_build", "random", "serde", "serde_json", "num", "rug", "pyo3", "pyo3-build-config", "indoc"]
bin_build = ["test_build"]
float_helpers = []
doc-images = ["embed-doc-image"]

[package.metadata.docs.rs]
# docs.rs uses a nightly compiler, so by instructing it to use our `doc-images` feature we
# ensure that it will render any images that we may have in inner attribute documentation.
features = ["doc-images", "random"]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
