[package]
name = "malachite-q"
version = "0.3.0"
authors = ["Mikhail Hogrefe <mikhailhogrefe@gmail.com>"]
rust-version = "1.61.0"
edition = "2021"
description = "The arbitrary-precision type Rational, with efficient algorithms partially derived from GMP and FLINT"
readme = "README.md"
homepage = "https://malachite.rs/"
repository = "https://github.com/mhogrefe/malachite"
license = "LGPL-3.0-only"
keywords = ["mathematics", "math", "numerics", "bignum"]
categories = ["mathematics"]

[lib]
name = "malachite_q"
path = "src/lib.rs"

[[bin]]
name = "malachite_q_main"
path = "src/bin.rs"

[dependencies]
itertools = "0.9.0"
malachite-base = "0.3.0"
malachite-nz = "0.3.0"
serde = { version = "^1.0.0", optional = true, features = ["derive"] }

serde_json = { version = "^1.0.32", optional = true }
num = { version = "0.4.0", optional = true, features = ["serde"] }
rug = { version = "1.16.0", default-features = false, optional = true, features = ["rational", "serde"] }

[features]
enable_serde = ["serde", "malachite-nz/enable_serde"]
32_bit_limbs = ["malachite-nz/32_bit_limbs"]
test_build = ["malachite-base/test_build", "malachite-nz/test_build", "serde", "serde_json", "num", "rug"]
bin_build = ["test_build"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
