[package]
name = "malachite-test"
version = "0.1.0"
authors = ["Mikhail Hogrefe <mikhailhogrefe@gmail.com>"]

[lib]
name = "malachite_test"
path = "src/lib.rs"

[[bin]]
name = "malachite_test_main"
path = "src/bin.rs"

[features]
default = ["32_bit_limbs"]

32_bit_limbs = ["malachite-nz/32_bit_limbs", "rust-wheels/32_bit_limbs"]
64_bit_limbs = ["malachite-nz/64_bit_limbs", "rust-wheels/64_bit_limbs"]

[dependencies]
malachite-base = { path = "../malachite-base" }
malachite-nz = { path = "../malachite-nz", default-features = false, features = ["serde"] }
rust-wheels = { path = "../../rust-wheels", default-features = false }
itertools = "0.7.8"
num = "0.2.0"
rand = "0.3.0"
serde = "^1.0.0"
serde_json = "^1.0.32"

[dependencies.rug]
version = "^1.2.0"
default-features = false
features = ["integer"]

[profile.release]
lto = true
