[package]
name = "malachite-test"
version = "0.1.0"
authors = ["Mikhail Hogrefe <mikhailhogrefe@gmail.com>"]

[lib]
name = "malachite_test"
path = "src/lib.rs"

[[bin]]
name = "malachite_test_main"
path = "src/bin.rs"

[features]
32_bit_limbs = ["malachite-nz/32_bit_limbs", "rust-wheels/32_bit_limbs"]
fail_on_untested_path = ["malachite-nz/fail_on_untested_path"]

[dependencies]
malachite-base = { path = "../malachite-base" }
malachite-base-test-util = { path = "../malachite-base-test-util" }
malachite-nz = { path = "../malachite-nz", default-features = false, features = ["serde"] }
malachite-nz-test-util = { path = "../malachite-nz-test-util" }
malachite-bench = { path = "../malachite-bench", default-features = false }
rust-wheels = { path = "../../rust-wheels", default-features = false }
itertools = "0.9.0"
num = "0.2.0"
rand = "0.4.6"
serde = "^1.0.0"
serde_json = "^1.0.32"
streaming-stats = "0.2.2"
time = "0.1.40"

[dependencies.rug]
version = "^1.2.0"
default-features = false
features = ["integer"]

[profile.release]
lto = true
