[package]
name = "malachite"
version = "0.3.2"
authors = ["Mikhail Hogrefe <mikhailhogrefe@gmail.com>"]
rust-version = "1.61.0"
edition = "2021"
description = "Arbitrary-precision arithmetic, with efficient algorithms partially derived from GMP and FLINT"
readme = "../README.md"
homepage = "https://malachite.rs/"
repository = "https://github.com/mhogrefe/malachite"
license = "LGPL-3.0-only"
keywords = ["mathematics", "math", "numerics", "bignum"]
categories = ["mathematics"]

[dependencies]
malachite-base = { workspace = true }
malachite-nz = { workspace = true, optional = true }
malachite-q = { workspace = true, optional = true }
serde = { version = "^1.0.0", optional = true, features = ["derive"] }

[features]
default = [ "naturals_and_integers", "rationals" ]
enable_serde = [ "malachite-q/enable_serde", "malachite-nz/enable_serde" ]
naturals_and_integers = [ "malachite-nz" ]
rationals = [ "malachite-q" ]

[package.metadata.docs.rs]
# docs.rs uses a nightly compiler, so by instructing it to use our `doc-images` feature we
# ensure that it will render any images that we may have in inner attribute documentation.
features = ["doc-images"]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
